...
        BannerHelpi()

        Spacer(modifier = Modifier.height(16.dp))

        Text(

            text = "Registro de Usuario",
            fontSize = 28.sp,
            fontWeight = FontWeight.Bold,
            color = MaterialTheme.colorScheme.primary,
            textAlign = TextAlign.Center

        )
...
            if (cargando) {

                CircularProgressIndicator(modifier = Modifier.size(24.dp), strokeWidth = 3.dp)

            } else {

                Text("Registrarse", fontSize = 20.sp)

            }
        }

        Spacer(modifier = Modifier.height(16.dp))

...
