...
        BannerHelpi()

        Spacer(modifier = Modifier.height(32.dp))

        Text(

            text = "Recuperar Contraseña",
            fontSize = 28.sp,
            fontWeight = FontWeight.Bold,
            textAlign = TextAlign.Center,
            color = MaterialTheme.colorScheme.primary

        )
...
